# sdl2test

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  main.cpp
SDL2/SDL2-2.28.2/test/: CMakeLists.txt
cmake_modules/: FindSDL2_image.cmake
logic/: BoardLogic.cpp  BoardLogic.h
ui/: BoardUI.cpp  BoardUI.h  TextureCreator.cpp
